--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header id="main-header" class="bg-success text-white p-4 mb-3">
     <div class="container">
-      <h1 id="header-title">Item Lister <span style="display:none">123</span></h1>
+      <h1 id="header-title">ITEM LISTER <span style="display:none">123</span></h1>
     </div>
   </header>
   <div class="container">
@@ -26,6 +26,7 @@
       <li class="list-group-item">Item 2</li>
       <li class="list-group-item">Item 3</li>
       <li class="list-group-item">Item 4</li>
+      <li> item 5</li>
     </ul>
    </div>
   </div>
